8247615: Initialize the bytes left for the heap sampler

Initialize the heap sampler correctly before usage

Reviewed-by: sspitsyn, martin, manc